--- a/css/style.css
+++ b/css/style.css
@@ -30,16 +30,24 @@ body{
 
 header img{
     width: 100%;
+    height: 100%;
     border-radius: 15px 15px 0px 0px;
 }
 
-.user-image img{
+.user-image{
     width: 97px;
+    height: 97px;
     border-radius: 50%;
     border: 5px solid white;
     position: absolute;
     transform: translate(122.5px, -127px);
     margin-bottom: 40px;
+}
+
+.user-image img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
 }
 
 .user-info{
